--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -89,6 +89,19 @@
                     </div>
                 </div>
                 <div class="separator"></div>
+                <section class="guide">
+                    <div class="guide__wrap container">
+                        <h2 class="guide__heading">
+                            И не случайным, а скорее закономерным стало то, что мотивацией коллектива стало:
+                        </h2>
+                        <ul class="guide__list">
+                            <li class="guide__item">Не бояться<br> смелых<br> решений</li>
+                            <li class="guide__item">Создавать</li>
+                            <li class="guide__item">Созидать</li>
+                            <li class="guide__item">Уважать<br> партнёров</li>
+                        </ul>
+                    </div>
+                </section>
             </div>
             <div class="page__footer">
                 <footer class="footer">
