--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -102,6 +102,149 @@
                         </ul>
                     </div>
                 </section>
+                <section class="ambitions">
+                    <div class="ambitions__top-content wysiwyg inner-container">
+                        <p>Одновременно росли амбиции. Усложнялись задачи. Проекты становились сложнее и весомее. Нарабатывались умение, навык, повышалась квалификация и компетентность специалистов.</p>
+                        <p>Для оптимизации производственного процесса, исключения зависимости от сторонних поставщиков и сокращения собственных издержек, в 2012 году компания ЭМКОМ кардинально меняет стратегию и производит реорганизацию, создаёт собственное производство полного цикла по пакетированию инженерного оборудования в модули собственного производства таких как:</p>
+                    </div>
+                    <div class="ambitions__gallery container container--no-padding-on-smartphone">
+                        <div class="
+                            carousel
+                            carousel--js-init-gallery
+                            carousel--css-skin-gallery
+                            carousel--css-default-arrow
+                        ">
+                            <div class="carousel__widget">
+                                <div class="swiper">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-a@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-a@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-b@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-b@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-c@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-c@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-a@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-a@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-b@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-b@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-c@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-c@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-a@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-a@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-b@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-b@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="thumbnail" href="#">
+                                                <img class="thumbnail__image"
+                                                     srcset="../temp/service-gallery/service-gallery-c@2x.jpg 2x"
+                                                     src="../temp/service-gallery/service-gallery-c@1x.jpg"
+                                                     width="546"
+                                                     height="458"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel__pagination">
+
+                            </div>
+                            <button class="carousel__button carousel__button--prev" type="button">
+                                <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M41.3609 52.271L43.0213 50.6129L27.4127 35.0019L43.0213 19.3933L41.3609 17.7305L24.0918 35.0019L41.3609 52.271Z"/>
+                                </svg>
+
+                            </button>
+                            <button class="carousel__button carousel__button--next" type="button">
+                                <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M28.6411 17.7305L26.9806 19.3886L42.5893 34.9996L26.9806 50.6082L28.6411 52.271L45.9102 34.9996L28.6411 17.7305Z"/>
+                                </svg>
+
+                            </button>
+                        </div>
+                    </div>
+                    <div class="ambitions__bottom-content wysiwyg inner-container">
+                        <p>Коллектив компании ЭМКОМ на практике занимается тем, что её создатели изучали в стенах петербургских ВУЗов. Проектирование и монтаж инженерных сетей и систем плотно вошли в жизнь дружной и сплочённой команды. В ходе тяжёлой, кропотливой работы совершали ошибки, исправляли их, нарабатывался опыт. Как следствие в 2009 г. ООО «ЭМКОМ» на всех этапах вводит строгий многоступенчатый контроль.</p>
+                    </div>
+                    <div class="ambitions__action">
+                        <a class="button button--larger" href="#">
+                            Дизельные электростанции
+                        </a>
+                    </div>
+                </section>
             </div>
             <div class="page__footer">
                 <footer class="footer">
