--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -103,9 +103,11 @@
                     </div>
                 </section>
                 <section class="ambitions">
-                    <div class="ambitions__top-content wysiwyg inner-container">
-                        <p>Одновременно росли амбиции. Усложнялись задачи. Проекты становились сложнее и весомее. Нарабатывались умение, навык, повышалась квалификация и компетентность специалистов.</p>
-                        <p>Для оптимизации производственного процесса, исключения зависимости от сторонних поставщиков и сокращения собственных издержек, в 2012 году компания ЭМКОМ кардинально меняет стратегию и производит реорганизацию, создаёт собственное производство полного цикла по пакетированию инженерного оборудования в модули собственного производства таких как:</p>
+                    <div class="ambitions__top-content container">
+                        <div class="ambitions__top-content-inner wysiwyg inner-container">
+                            <p>Одновременно росли амбиции. Усложнялись задачи. Проекты становились сложнее и весомее. Нарабатывались умение, навык, повышалась квалификация и компетентность специалистов.</p>
+                            <p>Для оптимизации производственного процесса, исключения зависимости от сторонних поставщиков и сокращения собственных издержек, в 2012 году компания ЭМКОМ кардинально меняет стратегию и производит реорганизацию, создаёт собственное производство полного цикла по пакетированию инженерного оборудования в модули собственного производства таких как:</p>
+                        </div>
                     </div>
                     <div class="ambitions__gallery container container--no-padding-on-smartphone">
                         <div class="
@@ -236,12 +238,14 @@
                             </button>
                         </div>
                     </div>
-                    <div class="ambitions__bottom-content wysiwyg inner-container">
-                        <p>Коллектив компании ЭМКОМ на практике занимается тем, что её создатели изучали в стенах петербургских ВУЗов. Проектирование и монтаж инженерных сетей и систем плотно вошли в жизнь дружной и сплочённой команды. В ходе тяжёлой, кропотливой работы совершали ошибки, исправляли их, нарабатывался опыт. Как следствие в 2009 г. ООО «ЭМКОМ» на всех этапах вводит строгий многоступенчатый контроль.</p>
+                    <div class="ambitions__bottom-content container">
+                        <div class="ambitions__bottom-content-inner wysiwyg inner-container">
+                            <p>Коллектив компании ЭМКОМ на практике занимается тем, что её создатели изучали в стенах петербургских ВУЗов. Проектирование и монтаж инженерных сетей и систем плотно вошли в жизнь дружной и сплочённой команды. В ходе тяжёлой, кропотливой работы совершали ошибки, исправляли их, нарабатывался опыт. Как следствие в 2009 г. ООО «ЭМКОМ» на всех этапах вводит строгий многоступенчатый контроль.</p>
+                        </div>
                     </div>
-                    <div class="ambitions__action">
+                    <div class="ambitions__action container">
                         <a class="button button--larger" href="#">
-                            Дизельные электростанции
+                            Дизельные<br class="smartphone-only"> электростанции
                         </a>
                     </div>
                 </section>
