--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,5 +55,6 @@
 @import url("_separator.css");
 @import url("_guide.css");
 @import url("_ambitions.css");
+@import url("_smartphone-only.css");
 
 
