--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -243,10 +243,12 @@
                             <p>Коллектив компании ЭМКОМ на практике занимается тем, что её создатели изучали в стенах петербургских ВУЗов. Проектирование и монтаж инженерных сетей и систем плотно вошли в жизнь дружной и сплочённой команды. В ходе тяжёлой, кропотливой работы совершали ошибки, исправляли их, нарабатывался опыт. Как следствие в 2009 г. ООО «ЭМКОМ» на всех этапах вводит строгий многоступенчатый контроль.</p>
                         </div>
                     </div>
-                    <div class="ambitions__action container">
-                        <a class="button button--larger" href="#">
-                            Дизельные<br class="smartphone-only"> электростанции
-                        </a>
+                    <div class="ambitions__action">
+                        <div class="ambitions__action-wrap container">
+                            <a class="button button--larger" href="#">
+                                Дизельные<br class="smartphone-only"> электростанции
+                            </a>
+                        </div>
                     </div>
                 </section>
             </div>
