--- a/src/styles/_thumbnail.css
+++ b/src/styles/_thumbnail.css
@@ -19,8 +19,11 @@
 
 
 @media (width < 740px) {
+
     .thumbnail__image {
         aspect-ratio: 360 / 240;
         object-fit: cover;
+        width: 100%;
+        height: auto;
     }
 }
