--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -251,6 +251,31 @@
                         </div>
                     </div>
                 </section>
+                <section class="plant">
+                    <div class="plant__wrap container">
+                        <h2 class="plant__heading">
+                            На данный момент Клиент компании ЭМКОМ при желании, может оформить и получить под ключ полный комплекс услуг для обеспечения инженерной инфраструктурой:
+                        </h2>
+                        <div class="plant__list">
+                            <div class="plant__item">
+                                <div class="plant__index">
+                                    от
+                                </div>
+                                <div class="plant__label">
+                                    услуг по <strong>разработке и&nbsp;изготовлению модулей</strong> с&nbsp;инженерным оборудованием
+                                </div>
+                            </div>
+                            <div class="plant__item">
+                                <div class="plant__index">
+                                    до
+                                </div>
+                                <div class="plant__label">
+                                    <strong>монтажа и ввода в&nbsp;эксплуатацию</strong> различных инженерных систем
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
             <div class="page__footer">
                 <footer class="footer">
