--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -57,5 +57,6 @@
 @import url("_ambitions.css");
 @import url("_smartphone-only.css");
 @import url("_plant.css");
+@import url("_hide-on-monitor.css");
 
 
