--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -2,7 +2,7 @@
 <html lang="ru" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
-        <title>Главная</title>
+        <title>О компании</title>
         <meta name="description" content="[%description%]">
 
         <!-- schema.org (google plus) -->
@@ -112,8 +112,8 @@
                     <div class="ambitions__gallery container container--no-padding-on-smartphone">
                         <div class="
                             carousel
-                            carousel--js-init-gallery
-                            carousel--css-skin-gallery
+                            carousel--js-init-stories
+                            carousel--css-skin-stories
                             carousel--css-default-arrow
                         ">
                             <div class="carousel__widget">
@@ -287,7 +287,122 @@
                             Производственная <br class="hide-on-monitor">деятельность
                         </a>
                     </div>
-                    11
+                </section>
+                <section class="folder">
+                    <div class="folder__gallery container container--no-padding-on-smartphone">
+                        <div class="
+                            carousel
+                            carousel--js-init-folder
+                            carousel--css-skin-folder
+                            carousel--css-default-arrow
+                        ">
+                            <div class="carousel__widget">
+                                <div class="swiper">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-a@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-a@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-b@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-b@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-c@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-c@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-d@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-d@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-e@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-f@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-g@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel__pagination">
+
+                            </div>
+                            <button class="carousel__button carousel__button--prev" type="button">
+                                <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M41.3609 52.271L43.0213 50.6129L27.4127 35.0019L43.0213 19.3933L41.3609 17.7305L24.0918 35.0019L41.3609 52.271Z"/>
+                                </svg>
+
+                            </button>
+                            <button class="carousel__button carousel__button--next" type="button">
+                                <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M28.6411 17.7305L26.9806 19.3886L42.5893 34.9996L26.9806 50.6082L28.6411 52.271L45.9102 34.9996L28.6411 17.7305Z"/>
+                                </svg>
+
+                            </button>
+                        </div>
+                    </div>
+                    <div class="folder__action">
+                        <div class="folder__action-wrap container">
+                            <a class="button button--larger" href="#">
+                                Посмотреть<br class="hide-on-desktop"> всю документацию
+                            </a>
+                        </div>
+                    </div>
                 </section>
             </div>
             <div class="page__footer">
