--- a/src/styles/_ambitions.css
+++ b/src/styles/_ambitions.css
@@ -79,6 +79,7 @@
         }
             .ambitions__action .button {
                 width: 100%;
+                max-width: 400px;
             }
 }
 
