--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -58,5 +58,8 @@
 @import url("_smartphone-only.css");
 @import url("_plant.css");
 @import url("_hide-on-monitor.css");
+@import url("_folder.css");
+@import url("_certificate-preview.css");
+@import url("_hide-on-desktop.css");
 
 
