--- a/src/styles/_carousel.css
+++ b/src/styles/_carousel.css
@@ -489,43 +489,47 @@
                             }
 }
 
-.carousel--css-skin-stories {
 
-}
-    .carousel--css-skin-stories .carousel__widget {
+
+@media (width < 740px) {
+
+    .carousel--css-skin-stories {
 
     }
-
-    @media (min-width: 450px) {
         .carousel--css-skin-stories .carousel__widget {
-            padding-left: 16px;
-            padding-right: 16px;
-        }
-    }
-
-        .carousel--css-skin-stories .swiper {
 
         }
-            .carousel--css-skin-stories .swiper-wrapper {
+
+        @media (min-width: 450px) {
+            .carousel--css-skin-stories .carousel__widget {
+                padding-left: 16px;
+                padding-right: 16px;
+            }
+        }
+
+            .carousel--css-skin-stories .swiper {
 
             }
-                .carousel--css-skin-stories .swiper-slide {
+                .carousel--css-skin-stories .swiper-wrapper {
 
                 }
-                    .carousel--css-skin-stories .swiper-slide-active {
+                    .carousel--css-skin-stories .swiper-slide {
 
                     }
-                        .carousel--css-skin-stories .thumbnail {
+                        .carousel--css-skin-stories .swiper-slide-active {
 
                         }
+                            .carousel--css-skin-stories .thumbnail {
 
-                        .carousel--css-skin-stories .swiper-slide-active .thumbnail {
+                            }
 
-                        }
+                            .carousel--css-skin-stories .swiper-slide-active .thumbnail {
+
+                            }
+}
 
 
 /* Folder */
-
 
 .carousel--css-skin-folder {
 
@@ -537,7 +541,8 @@
 
         }
             .carousel--css-skin-folder .swiper-wrapper {
-                transition-timing-function: linear;
+                /* Если будем делать бегущую строку: */
+                /*transition-timing-function: linear;*/
             }
                 .carousel--css-skin-folder .swiper-slide {
 
@@ -553,5 +558,42 @@
                         .carousel--css-skin-folder .swiper-slide-active .thumbnail {
 
                         }
+
+
+
+
+@media (width < 740px) {
+
+    .carousel--css-skin-folder {
+        overflow: hidden;
+    }
+        .carousel--css-skin-folder .carousel__widget {
+            padding-left: 80px;
+            padding-right: 80px;
+        }
+            .carousel--css-skin-folder .swiper {
+                overflow: visible;
+            }
+                .carousel--css-skin-folder .swiper-wrapper {
+                    /* Если будем делать бегущую строку: */
+                    /*transition-timing-function: linear;*/
+                }
+                    .carousel--css-skin-folder .swiper-slide {
+
+                    }
+
+                        .carousel--css-skin-folder .swiper-slide-active {
+
+                        }
+                            .carousel--css-skin-folder .thumbnail {
+
+                            }
+
+                            .carousel--css-skin-folder .swiper-slide-active .thumbnail {
+
+                            }
+
+
+}
 
 
