--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -61,5 +61,6 @@
 @import url("_folder.css");
 @import url("_certificate-preview.css");
 @import url("_hide-on-desktop.css");
+@import url("_logo.css");
 
 
