--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -62,5 +62,6 @@
 @import url("_certificate-preview.css");
 @import url("_hide-on-desktop.css");
 @import url("_logo.css");
+@import url("_request-button.css");
 
 
