--- a/src/styles/_header.css
+++ b/src/styles/_header.css
@@ -2,3 +2,91 @@
     height: var(--header-height);
     background-color: #0D25FF;
 }
+    .header__detachable-part {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+        .header__show-menu {
+            display: none;
+        }
+
+        .header__branding {
+            margin-top: 1px;
+        }
+
+        .header__contacts {
+            margin-top: -6px;
+            width: 277px;
+            flex-shrink: 0;
+        }
+            .header__phone {
+                margin-left: auto;
+                display: flex;
+                width: fit-content;
+                align-items: center;
+                gap: 10px;
+                font-weight: 400;
+                font-size: 28px;
+                line-height: 34px;
+                color: #FFFFFF;
+                text-decoration: none;
+            }
+                .header__tel-icon {
+                    vertical-align: top;
+                    margin-top: 2px;
+                }
+
+            .header__request {
+                margin-top: 8px;
+            }
+
+
+
+@media (1850px <= width) {
+
+    .header {
+        /*height: var(--header-height);*/
+        /*background-color: #0D25FF;*/
+    }
+        .header__detachable-part {
+            /*height: 100%;*/
+            /*display: flex;*/
+            /*align-items: center;*/
+            /*justify-content: space-between;*/
+        }
+            .header__show-menu {
+                /*display: none;*/
+            }
+
+            .header__branding {
+                /*margin-top: 1px;*/
+            }
+
+            .header__contacts {
+                /*margin-top: -6px;*/
+                /*width: 277px;*/
+                /*flex-shrink: 0;*/
+            }
+                .header__phone {
+                    /*margin-left: auto;*/
+                    /*display: flex;*/
+                    /*width: fit-content;*/
+                    /*align-items: center;*/
+                    /*gap: 10px;*/
+                    /*font-weight: 400;*/
+                    /*font-size: 28px;*/
+                    /*line-height: 34px;*/
+                    /*color: #FFFFFF;*/
+                    /*text-decoration: none;*/
+                }
+                    .header__tel-icon {
+                        /*vertical-align: top;*/
+                        /*margin-top: 2px;*/
+                    }
+
+                .header__request {
+                    margin-top: 14px;
+                }
+}
