--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,5 +63,6 @@
 @import url("_hide-on-desktop.css");
 @import url("_logo.css");
 @import url("_request-button.css");
+@import url("_menu.css");
 
 
