--- a/src/styles/_menu.css
+++ b/src/styles/_menu.css
@@ -148,3 +148,101 @@
 }
 
 
+
+@media (width < 740px) {
+
+    .menu {
+        display: none;
+        position: static;
+        /*left: 0;*/
+        /*top: 0;*/
+        /*right: 0;*/
+        height: auto;
+        background-color: #0D25FF;
+    }
+        .menu__wrap {
+            /*height: 100%;*/
+            display: block;
+            /*align-items: center;*/
+            padding-top: 20px;
+            padding-bottom: 80px;
+        }
+            .menu__navigation {
+                margin-left: 0;
+                margin-right: 0;
+                /*flex-grow: 1;*/
+                display: block;
+                /*align-items: center;*/
+                /*justify-content: space-between;*/
+            }
+                .menu__section {
+                    margin-top: 16px;
+                }
+
+                .menu__section:first-child {
+                    margin-top: 0;
+                }
+                    .menu__link {
+                        /*display: block;*/
+                        /*padding: 10px;*/
+                        /*width: fit-content;*/
+                        /*font-weight: bold;*/
+                        padding-left: 0;
+                        padding-right: 0;
+                        font-size: 18px;
+                        line-height: 22px;
+                        /*color: #FFFFFF;*/
+                        /*text-transform: uppercase;*/
+                        /*text-decoration: 2.3px underline transparent;*/
+                        /*text-underline-offset: 10px;*/
+                        /*transition: text-decoration-color var(--transition-hover);*/
+                    }
+
+                    .menu__link:hover {
+                        /*text-decoration-color: #00F0FF;*/
+                    }
+
+                    .menu__sub-menu {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                        .menu__sub-link {
+                            display: block;
+                            width: fit-content;
+                            padding-top: 5px;
+                            padding-bottom: 5px;
+                            font-size: 18px;
+                            line-height: 24px;
+                            color: #FFFFFF;
+                            text-decoration: none;
+                        }
+
+            .menu__contacts {
+                margin-top: 40px;
+                margin-left: 0;
+                /*width: 277px;*/
+                /*flex-shrink: 0;*/
+            }
+                .menu__phone {
+                    /*margin-left: auto;*/
+                    /*display: flex;*/
+                    /*width: fit-content;*/
+                    /*align-items: center;*/
+                    /*gap: 10px;*/
+                    /*font-weight: 400;*/
+                    /*font-size: 28px;*/
+                    /*line-height: 34px;*/
+                    /*color: #FFFFFF;*/
+                    /*text-decoration: none;*/
+                }
+                    .menu__tel-icon {
+                        /*vertical-align: top;*/
+                        /*margin-top: 2px;*/
+                    }
+
+                .menu__request {
+                    /*margin-top: 8px;*/
+                }
+}
+
+
