--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" itemscope itemtype="https://schema.org/Thing">
+<html class="menu-expanded" lang="ru" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
         <title>Главная</title>
