--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="menu-expanded" lang="ru" itemscope itemtype="https://schema.org/Thing">
+<html lang="ru" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
         <title>Главная</title>
@@ -59,7 +59,7 @@
             <div class="page__header">
                 <header class="header">
                     <div class="header__detachable-part container">
-                        <button class="header__show-menu" type="button">
+                        <button class="header__toggle-menu" type="button">
                             Показать меню
                         </button>
                         <a class="header__branding logo logo--larger" href="#">
