--- a/src/styles/_menu.css
+++ b/src/styles/_menu.css
@@ -160,7 +160,7 @@
         height: auto;
     }
 
-    .menu-expanded .menu {
+    .burger-expanded .menu {
         display: block;
     }
         .menu__wrap {
@@ -175,6 +175,7 @@
                 margin-right: 0;
                 /*flex-grow: 1;*/
                 display: block;
+                width: fit-content;
                 /*align-items: center;*/
                 /*justify-content: space-between;*/
             }
