--- a/src/layouts/projects-item.html
+++ b/src/layouts/projects-item.html
@@ -58,8 +58,58 @@
         <div class="page">
             <div class="page__header">
                 <header class="header">
-
+                    <div class="header__detachable-part container">
+                        <button class="header__toggle-menu" type="button">
+                            Показать меню
+                        </button>
+                        <a class="header__branding logo logo--larger" href="#">
+                            ЕМКОМ - инженерная компания
+                        </a>
+                    </div>
                 </header>
+                <div class="menu">
+                    <div class="menu__wrap container">
+                        <div class="menu__navigation">
+                            <div class="menu__section">
+                                <a class="menu__link" href="#">
+                                    О Компании
+                                </a>
+                                <div class="menu__sub-menu">
+                                    <a class="menu__sub-link" href="#">Производственная<br> деятельность</a>
+                                    <a class="menu__sub-link" href="#">Документация</a>
+                                </div>
+                            </div>
+                            <div class="menu__section">
+                                <a class="menu__link" href="#">
+                                    Услуги
+                                </a>
+                                <div class="menu__sub-menu">
+                                    <a class="menu__sub-link" href="#">Монтаж и проектирование<br> инженерных систем</a>
+                                    <a class="menu__sub-link" href="#">Комплексное производство<br> модульных решений</a>
+                                </div>
+                            </div>
+                            <div class="menu__section">
+                                <a class="menu__link" href="#">Проекты</a>
+                            </div>
+                            <div class="menu__section">
+                                <a class="menu__link" href="#">Контакты</a>
+                            </div>
+                        </div>
+                        <div class="menu__contacts">
+                            <a class="menu__phone" href="tel:+78123894114">
+                                <svg class="menu__tel-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path fill="#fff" d="M9.025 8.506c.236-.235.572-.64.74-1.078.607-1.482.338-1.752.338-1.752-.404-.842-1.247-1.987-2.359-3.133C6.633 1.431 5.487.555 4.611.185c0 0-1.381-.438-2.425.606l-.438.438 7.277 7.277ZM23.815 19.387c-.404-.842-1.246-1.988-2.358-3.133-1.112-1.112-2.257-1.988-3.133-2.358 0 0-.304-.27-1.752.336-.438.169-.842.506-1.078.742l7.277 7.277c.135-.135.303-.27.438-.404 1.044-1.079.606-2.46.606-2.46ZM14.718 16.018c-.236.303-.607.438-1.011.438-1.314 0-3.302-1.179-4.144-2.021-1.112-1.112-2.83-4.245-1.583-5.155.067-.034.134-.101.202-.135L1.107 2.07C.029 3.687.096 4.968.096 4.968s-.168 5.896 6.435 12.499c6.266 6.266 11.859 6.435 12.432 6.435h.067c.168 0 1.381-.034 2.897-1.011l-7.075-7.075c-.033.067-.1.135-.134.202Z"/>
+                                </svg>
+                                +7 (812) 389-41-14
+                            </a>
+                            <div class="menu__request">
+                                <a class="request-button" href="#">
+                                    Оставить заявку
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="page__body">
                 <div class="project">
